# ProteinEBM

./: .gitignore  LICENSE  README.md  pyproject.toml
download_scripts/: download_data.sh  download_eval_data.sh  download_weights.sh
eval_data/: lpla.csv
notebooks/: analyze_dynamics.ipynb  confbiasing.ipynb  ddg_prediction.ipynb  diffusion_inference.ipynb  rank_decoys.ipynb
protein_ebm/config/: base_pretrain.yaml
protein_ebm/data/: data_source.py  dataset.py  protein_utils.py
protein_ebm/data/data_lists/: blocked_ids_combined_structure_split.txt  membrane_pdbs.txt  test_decoys.txt  validation_decoys.txt
protein_ebm/data/data_scripts/: build_decoy_sets.py  build_tensors_cath.py  build_tensors_complexes.py  build_tensors_ted.py  build_val_test.py  download_afdb_files.py  download_cifs.py  extract_high_confidence_domains.py  filter_cath.py  filter_cath_by_seq.py  filter_ted_by_seq.py  generate_structure_split.py  make_decoys_fasta.py  make_full_chain_afdb_fasta.py  make_full_chain_cath_fasta.py  make_md_dataset.py  parse_ted_afdb.py
protein_ebm/model/: boltz_utils.py  ebm.py  layers.py  r3_diffuser.py
protein_ebm/scripts/: run_dynamics.py  score_decoys.py  train.py
